--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>I DID IT!!</h1>
-    <img src=https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcR2e1P2oZt4fdFqMrxFIHaQrMv2IJor48EoG7T6VvRnvY3lovMIxg>
+    <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcR2e1P2oZt4fdFqMrxFIHaQrMv2IJor48EoG7T6VvRnvY3lovMIxg">
     <h2>Trevor Glaze</h2>
     <p>I'm really into heavy metal. Heavy metal is my favorite thing on the whole planet.</p>
     <ul>I also like:
@@ -16,5 +16,6 @@
       <li>Sleeping</li>
     </ul>
     <p>In software engineering, I just want to build upon my current knowledge of HTML coding. I want to learn all that is possible with HTML coding.</p>
+    <a href="popup.html">Pop-Up</a>
   </body>
 </html>
