--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     </ul>
     <p>In software engineering, I just want to build upon my current knowledge of HTML coding. I want to learn all that is possible with HTML coding.</p>
     <a href="popup.html">Pop-Up</a>
+    <a href="breakout.html">Fireworks</a>
   </body>
 </html>
